--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
 }
 * {
   margin: 0;
+  padding: 0;
 }
 html,
 body {
@@ -32,8 +33,6 @@ input {
   border: none;
   background-image: none;
   background-color: transparent;
-  -webkit-box-shadow: none;
-  -moz-box-shadow: none;
   box-shadow: none;
 }
 input[type='search']::-webkit-search-decoration,
@@ -44,4 +43,138 @@ input[type='search']::-webkit-search-results-decoration {
 }
 .hidden-selection::selection {
   background-color: transparent;
+}
+button {
+  background: none;
+  color: inherit;
+  border: none;
+  padding: 0;
+  font: inherit;
+  outline: inherit;
+}
+.search-box {
+  position: fixed;
+  top: 0;
+  transform: translateY(var(--search-box_translate-y));
+  filter: opacity(var(--search-box_opacity));
+  right: var(--search-box_margin);
+  width: 800px;
+  max-width: var(--search-box_max-width);
+  background-color: #000;
+  contain: content;
+  font-family: 'IBM Plex Sans', sans-serif;
+  font-size: 16;
+}
+.search-box__line-container {
+  padding: 0.5em 1em;
+}
+.search-box__line-container:not(:first-child) {
+  padding-top: 0;
+}
+.search-box__line-container--search {
+  display: flex;
+  gap: 0.5em;
+  flex-wrap: wrap;
+}
+.search-box__line-container--search__sub-container {
+  display: flex;
+  gap: 0.5em;
+  align-items: center;
+  flex-wrap: wrap;
+}
+.search-box__line-container--search__sub-container--search-input {
+  flex-grow: 1;
+}
+.search-box__search-input {
+  outline: none;
+  background-color: #000;
+  color: #fff;
+  min-width: 250px;
+  border: 1px solid #fff;
+  padding: 0 0.5em;
+  width: 100%;
+}
+.search-box__search-input:focus-visible {
+  outline: 2px solid #aaa;
+}
+.search-box__search-results-info {
+  color: #fff;
+  white-space: pre;
+  min-width: 120px;
+}
+.search-box__button {
+  padding: 0 0.25em;
+}
+.search-box__button:focus-visible {
+  outline: 2px solid #aaa;
+}
+.search-box__button--text {
+  color: #fff;
+  border: 1px solid #fff;
+  white-space: pre;
+}
+.search-box__button--text:hover {
+  background-color: #fff;
+  border-color: #fff;
+  color: #000;
+}
+.search-box__button--text:active {
+  background-color: #bbb;
+  border-color: #bbb;
+  color: #000;
+}
+.search-box__button--icon {
+  width: 1.25em;
+  height: 1.25em;
+}
+.search-box__button--icon__svg {
+  width: 1.25em;
+  height: 1.25em;
+}
+.search-box__button--icon__path {
+  fill: #fff;
+}
+.search-box__button--icon:hover {
+  background-color: #333;
+}
+.search-box__button--icon:active {
+  background-color: #666;
+}
+.search-box__line-container--options {
+  display: flex;
+  gap: 0.5em 1em;
+  flex-wrap: wrap;
+  line-height: 1.25em;
+}
+.search-box__checkbox-container {
+  display: flex;
+  align-items: center;
+  gap: 0.35em;
+}
+.search-box__checkbox-input {
+  position: relative;
+  appearance: none;
+  background-color: #000;
+  width: 1em;
+  height: 1em;
+  border: 1px solid #fff;
+  outline: none;
+}
+.search-box__checkbox-input:checked {
+  display: flex;
+  background-color: #fff;
+}
+.search-box__checkbox-input:checked::before {
+  content: '\2713';
+  position: absolute;
+  left: calc(50% - 0.37em);
+  top: calc(50% - 0.58em);
+}
+.search-box__checkbox-input:focus-visible {
+  outline: 2px solid #aaa;
+  outline-offset: 0;
+}
+.search-box__checkbox-label {
+  user-select: none;
+  color: #fff;
 }
