--- a/src/index.css
+++ b/src/index.css
@@ -82,9 +82,6 @@ button {
   align-items: center;
   flex-wrap: wrap;
 }
-.search-box__line-container--search__sub-container--justify-between {
-  justify-content: space-between;
-}
 .search-box__line-container--search__sub-container--justify-end {
   justify-content: end;
 }
@@ -104,18 +101,20 @@ button {
   width: 100%;
 }
 .search-box__search-input:focus-visible {
-  outline: 2px solid #aaa;
+  border-color: rgb(100, 218, 251);
+  outline: 2px solid rgb(100, 218, 251);
 }
 .search-box__search-results-info {
   color: #fff;
   white-space: pre;
-  min-width: 120px;
+  min-width: 160px;
 }
 .search-box__button {
   padding: 0 0.25em;
 }
 .search-box__button:focus-visible {
-  outline: 2px solid #aaa;
+  border-color: rgb(100, 218, 251);
+  outline: 2px solid rgb(100, 218, 251);
 }
 .search-box__button--text {
   color: #fff;
@@ -171,7 +170,8 @@ button {
 }
 .search-box__checkbox-input:checked {
   display: flex;
-  background-color: #fff;
+  border-color: rgb(100, 218, 251);
+  background-color: rgb(100, 218, 251);
 }
 .search-box__checkbox-input:checked::before {
   content: '\2713';
@@ -179,9 +179,17 @@ button {
   left: calc(50% - 0.37em);
   top: calc(50% - 0.58em);
 }
-.search-box__checkbox-input:focus-visible {
-  outline: 2px solid #aaa;
-  outline-offset: 0;
+@supports selector(:has(*)) {
+  .search-box__checkbox-container:has(.search-box__checkbox-input:focus-visible) {
+    outline: 2px solid rgb(100, 218, 251);
+    outline-offset: 2px;
+  }
+}
+@supports not selector(:has(*)) {
+  .search-box__checkbox-input:focus-visible {
+    outline: 2px solid rgb(100, 218, 251);
+    outline-offset: 2px;
+  }
 }
 .search-box__checkbox-label {
   user-select: none;
