--- a/src/index.css
+++ b/src/index.css
@@ -163,6 +163,7 @@ button {
   display: flex;
   align-items: center;
   justify-content: center;
+  flex-shrink: 0;
   position: relative;
   appearance: none;
   background-color: #000;
